tdf#131641 Enter selected text in the search bar (Basic IDE)

This patch makes the selected text in the code editor be
automatically inserted in the search bar.

Change-Id: Ibbe64aa3375a5a47dedb762001ed4b99f4b22e46
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162548
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>
Tested-by: Andreas Heinisch <andreas.heinisch@yahoo.de>